2005-08-23  Carl Worth  <cworth@cworth.org>

	* BUGS:
	* src/cairo-xlib-screen.c: Move comment about missing cleanup of
	caches on XCloseDisplay from BUGS to a
	_cairo_xlib_close_display. Also covered in bug #4120.

2005-08-23  Carl Worth  <cworth@cworth.org>

	* test/Makefile.am:
	* test/caps-sub-paths.c: (main): Remove caps-sub-paths from the
	XFAIL list since it is fixed now.

2005-08-23  Carl Worth  <cworth@cworth.org>

	Fix for bug #4205:

	* src/cairo-path-stroke.c: (_cairo_stroker_add_caps):
	(_cairo_path_fixed_stroke_to_traps): Abstract the cap-addition
	code from the end of the stroke operation into a new
	_cairo_stroker_add_caps function.

	* src/cairo-path-stroke.c: (_cairo_stroker_move_to): Call the new
	_cairo_stroker_add_caps at the beginning of every move_to so that
	we get caps on every subpath and not just the last one.

2005-08-23  Billy Biggs  <vektor@dumbterm.net>

	* src/Makefile.am: Add libpixman.la to the libcairo_la_DEPENDENCIES
	line so that changes to pixman get picked up.

2005-08-23  Owen Taylor  <otaylor@redhat.com>

	Some fixes for warnings from sparse (Part of #4208, 
	Kjartan Maraas)

	* test/cairo-test.c (create_xlib_surface): Use NULL, not 0.

	* src/cairo-matrix.c (_cairo_matrix_transformed_circle_major_axis):
	Fix C99'ism of mixed code and declarations.

2005-08-23  Carl Worth  <cworth@cworth.org>

	* BUGS: caps only added to last subpath: COVERED by
	test/caps-sub-paths and bug #4205.

2005-08-23  Carl Worth  <cworth@cworth.org>

	* test/caps-sub-paths.c: Use the expect_failure variant of
	cairo_test so that make check prints the reason this test fails.
	
2005-08-23  Carl Worth  <cworth@cworth.org>

	* test/.cvsignore:
	* test/Makefile.am:
	* test/caps-sub-paths-ref.png:
	* test/caps-sub-paths.c: (draw), (main): Add test to demonstrate
	bug #4205, missing caps on all but last sub-path in a complex
	path.

2005-08-22  Carl Worth  <cworth@cworth.org>

	* src/cairo.c (cairo_create): Remove discussion of the BAD_NESTING